Connection with HiveCloude

--- a/industry-project/package.json
+++ b/industry-project/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "expo": "^44.0.6",
     "expo-status-bar": "~1.2.0",
+    "paho-mqtt": "^1.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-paho-mqtt": "^0.1.1",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
