--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.2.2",
+    "expo-font": "^10.1.0",
     "react-navigation-stack": "^2.10.4"
   }
 }
