--- a/industry-project/package.json
+++ b/industry-project/package.json
@@ -11,15 +11,19 @@
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.2",
+    "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "expo": "^44.0.6",
+    "expo-constants": "~13.0.1",
     "expo-font": "~10.0.4",
+    "expo-location": "~14.0.1",
     "expo-status-bar": "~1.2.0",
     "paho-mqtt": "^1.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.64.3",
+    "react-native-maps": "0.29.4",
     "react-native-paho-mqtt": "^0.1.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
