--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.2",
     "expo-font": "^10.1.0",
+    "expo-location": "^14.2.2",
     "react-navigation-stack": "^2.10.4"
   }
 }
