--- a/industry-project/package.json
+++ b/industry-project/package.json
@@ -19,6 +19,7 @@
     "expo-font": "~10.0.4",
     "expo-location": "~14.0.1",
     "expo-status-bar": "~1.2.0",
+    "geolib": "^3.3.3",
     "paho-mqtt": "^1.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
