--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "@expo-google-fonts/inter": "^0.2.2",
     "expo-font": "^10.1.0",
     "expo-location": "^14.2.2",
+    "geolib": "^3.3.3",
+    "paho-mqtt": "^1.1.0",
     "react-navigation-stack": "^2.10.4"
   }
 }
