--- a/industry-project/package.json
+++ b/industry-project/package.json
@@ -14,21 +14,21 @@
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
-    "expo": "^44.0.6",
-    "expo-constants": "~13.0.1",
-    "expo-font": "~10.0.4",
-    "expo-location": "~14.0.1",
-    "expo-status-bar": "~1.2.0",
+    "expo": "^48.0.9",
+    "expo-constants": "~14.2.1",
+    "expo-font": "~11.1.1",
+    "expo-location": "~15.1.1",
+    "expo-status-bar": "~1.4.4",
     "geolib": "^3.3.3",
     "paho-mqtt": "^1.1.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-native": "0.64.3",
-    "react-native-maps": "0.29.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.71.4",
+    "react-native-maps": "1.3.2",
     "react-native-paho-mqtt": "^0.1.1",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.10.1",
-    "react-native-web": "0.17.7"
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-web": "~0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
