--- a/industry-project/package.json
+++ b/industry-project/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.2",
     "@expo/webpack-config": "^18.0.1",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
+    "d3": "^7.8.4",
     "expo": "^48.0.0",
     "expo-constants": "~14.2.1",
     "expo-font": "~11.1.1",
@@ -24,12 +26,14 @@
     "paho-mqtt": "^1.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.6",
+    "react-native": "0.71.8",
+    "react-native-bouncy-checkbox": "^3.0.7",
     "react-native-maps": "1.3.2",
     "react-native-paho-mqtt": "^0.1.1",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-svg": "^13.9.0",
+    "react-native-svg": "13.4.0",
+    "react-native-svg-charts": "^5.4.0",
     "react-native-web": "~0.18.11",
     "yarn": "^1.22.19"
   },
